<resources>
    <string name="app_name">Health_Care</string>
    <!--    <string name="already_hav">already have an acount? login</string>-->

    <!--    <string name="Dont_Hav_Ac"><font color="#000000">Don't have an account?</font> <font-->
    <!--        color="#1847b5">sign in</font></string>-->

    <!--    <string name="Already_Hav_Ac"><font color="#000000">Already have an account?</font> <font-->
    <!--        color="#1847b5">login</font></string>-->

    <string name="Already_Hav_Ac">Already have an account? login</string>
    <string name="welcome">Welcome</string>
    <string name="create_acco">Create Account</string>
    <string name="Login">login</string>
    <string name="secure_your"><font color="#FF47FF44">Secure </font><font color="#FFFFFF">Your Loved Ones</font></string>
    <string name="enjoy_life_">Enjoy Life at Every Stage</string>
    <string name="get_started">Get \nStarted!</string>
    <string name="pharmacies_">Pharmacies You Marked</string>
    <string name="your_drug_s">Your Drug Search History</string>
    <string name="latest_drugs">Latest Drugs</string>
    <string name="search">search</string>
    <string name="search_medi">Search Medicine</string>
    <string name="login_successful_message">Successfully login</string>
    <string name="login_failed_message">failed login</string>
    <string name="once_login_error_message">\"you loginned as \"</string>
    <string name="welcome_to_pharmacy_finder">Welcome to Pharmacy Finder</string>
    <string name="don_t_have_an_account_sign_in"><font color="#000000">don\'t have an account? </font><font color="#1847b5">sign in</font></string>
    <string name="sign_in_as_phar"><font color="#1847b5">sign in your pharmacy</font></string>
    <string name="app_icon">APP ICON</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="redirectToPharmacyRegisterText">create an account if you don\'t have one.</string>
    <string name="title_activity_search_page">SearchPage</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="medicine">medicine</string>
    <string name="pharmacy">pharmacy</string>
    <string name="done">done</string>

    <string name="search_here">search here...</string>
</resources>