<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clipToOutline="true"
    tools:context=".MainActivity">


    <View
        android:id="@+id/view3"
        android:layout_width="132dp"
        android:layout_height="127dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="326dp"
        android:layout_marginEnd="265dp"
        android:background="@drawable/circle2" />

    <View
        android:id="@+id/view2"
        android:layout_width="57dp"
        android:layout_height="51dp"
        android:layout_marginStart="82dp"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="540dp"
        android:layout_marginEnd="272dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/circle" />

    <View
        android:id="@+id/view"
        android:layout_width="90dp"
        android:layout_height="87dp"
        android:layout_marginStart="236dp"
        android:layout_marginLeft="236dp"
        android:layout_marginTop="349dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="294dp"
        android:background="@drawable/circle" />

    <View
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-27dp"
        android:layout_marginLeft="-27dp"
        android:layout_marginTop="193dp"
        android:layout_marginEnd="263dp"
        android:layout_marginBottom="369dp"
        android:background="@drawable/circle" />

    <View
        android:layout_width="155dp"
        android:layout_height="152dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="256dp"
        android:layout_marginLeft="256dp"
        android:layout_marginTop="433dp"
        android:background="@drawable/circle2" />

    <View
        android:layout_width="412dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="-26dp"
        android:layout_marginBottom="498dp"
        android:background="@drawable/customer_main_page_up" />


    <ImageView
        android:layout_width="232dp"
        android:layout_height="179dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="476dp"
        app:srcCompat="@drawable/pngitem_4053786" />

    <TextView
        android:id="@+id/secure_your"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="45dp"
        android:gravity="top"
        android:text="@string/secure_your"
        android:textAppearance="@style/secure_your" />

    <TextView
        android:id="@+id/enjoy_life_"
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="632dp"
        android:fontFamily="@font/playfair_display"
        android:gravity="top"
        android:letterSpacing="0.08"
        android:text="@string/enjoy_life_"
        android:textAppearance="@style/enjoy_life_"
        android:textSize="15dp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view4"
        android:layout_width="214dp"
        android:layout_height="191dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-41dp"
        android:layout_marginLeft="-41dp"
        android:layout_marginTop="558dp"
        android:layout_marginEnd="238dp"
        android:layout_marginBottom="-18dp"
        android:background="@drawable/circle2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/topCell"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="248dp"
        android:layout_marginBottom="251dp"
        android:background="@drawable/customer_main_page_cell1" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/belowCell"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="500dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/customer_main_page_cell1" />

    <TextView
        android:id="@+id/pharmacies_"
        android:layout_width="183dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="515dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="181dp"
        android:gravity="top"
        android:text="@string/your_drug_s"
        android:textAppearance="@style/pharmacies_" />

    <TextView
        android:id="@+id/drugs"
        android:layout_width="183dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="432dp"
        android:gravity="top"
        android:text="@string/pharmacies_"
        android:textAppearance="@style/pharmacies_" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="662dp"
        app:srcCompat="@drawable/pngitem_1428153" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="43dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="677dp"
        android:backgroundTint="#0C0505"
        android:backgroundTintMode="multiply"
        app:srcCompat="@drawable/pngitem_587330" />

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="104dp"
        android:layout_height="82dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="123dp"
        android:background="@drawable/get_started_btn_style" />

    <TextView
        android:id="@+id/get_started"
        android:layout_width="72dp"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="548dp"
        android:fontFamily="@font/playfair_display"
        android:gravity="center_horizontal|top"
        android:text="@string/get_started"
        android:textAppearance="@style/get_started"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="348dp"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="287dp"
        android:layout_marginEnd="33dp"
        android:background="@drawable/line_1" />


    <View
        android:layout_width="348dp"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="538dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/line_1" />


</RelativeLayout>